[package]
name = "dioxus-utils"
version = "0.7.0"
edition = "2021"


[features]
default = []
fullstack = ["dioxus/fullstack"]
server = ["tokio/time"]


[dependencies]
dioxus = { version = "0.7" }
web-sys = { version = "*", features = ["Storage"] }
js-sys = { version = "*" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
gloo-timers = { version = "*", features = ["futures"] }

tokio = { version = "*", optional = true }
